@@ -841,6 +841,7 @@ IMPORTANT: please read docs/tech/tn0016.txt before modifying this file!
     wx/textctrl.h
     wx/textdlg.h
     wx/textentry.h
+    wx/textwrapper.h
     wx/toolbar.h
     wx/validate.h
     wx/valtext.h
